<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ecdhCipherActivity"
            type="com.study.cipher.ecdhcipher.EcdhCiperActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ecdhcipher.EcdhCiperActivity">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/keyGenerateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{()->ecdhCipherActivity.onGenerateECKeyPair()}"
                android:text="@string/ui_key_generate"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/publicKeyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/keyAgreementButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{()->ecdhCipherActivity.onAgreementKey()}"
                android:text="@string/ui_key_agreement"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/keyIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <Button
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{()->ecdhCipherActivity.onReset()}"
                android:text="@string/ui_reset"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/messageEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:autofillHints="@string/ui_input_your_message"
                    android:hint="@string/ui_input_your_message"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:onClick="@{()->ecdhCipherActivity.onSend()}"
                    android:text="@string/ui_send"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_origin_msg"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_origin_message" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="#989393" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_encrypted_msg"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/encryptionCBCTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_encryption_message" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_decrypted_msg"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/decryptionCBCTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_decryption_message" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="#989393" />
        </LinearLayout>


        <ScrollView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messageLayout"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/publicKeyIdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>


<!--        <LinearLayout-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/messageLayout"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:orientation="vertical">-->
<!--        </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
